# FastAPI-groundwork

./: .gitignore  README.md  pyproject.toml
app/: main.py
