[tool.poetry]
name = "fastapi-groundwork"
version = "0.1.0"
description = "Playground for FastAPI"
authors = ["Eric You"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.2"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
